--- a/Clover_Frontend/src/app/signup/signup.page.html
+++ b/Clover_Frontend/src/app/signup/signup.page.html
@@ -1,10 +1,9 @@
 <ion-header>
   <ion-toolbar color="primary">
     </ion-toolbar>
-  <ion-header class="ion-no-border">
-   </ion-header>
+</ion-header>
 
-<ion-content fullscreen="true">
+<ion-content scrollY = "false" scrollX = "false">
   <div id="header">
     <img src="assets/icon/logo+.png" />
   </div>
