quick-tour done

--- a/Clover_Frontend/src/app/login/login.page.html
+++ b/Clover_Frontend/src/app/login/login.page.html
@@ -17,7 +17,7 @@
       </app-input>
       <ion-button  class="pass" type="button" expand="block" color="medium" fill="clear" slot="end">Forgot password?
       </ion-button>
-      <ion-button expand="full" size="large">LOGIN</ion-button>
+      <ion-button routerLink="/tour-start" expand="full" size="large">LOGIN</ion-button>
     </form>
     <ion-button routerLink="/signup" type="button" expand="block" color="medium" fill="clear">Don't have an account? Sign up here
     </ion-button>
