--- a/Clover_Frontend/src/app/tour-start/tour-start.page.html
+++ b/Clover_Frontend/src/app/tour-start/tour-start.page.html
@@ -13,7 +13,7 @@
     with the indoor climate</h1>
     <h1>Do you want to take a<br> 
       quick tour of the app?</h1>
-     <ion-button class="yes" expand="full" size="large" >Yes</ion-button>
-     <ion-button class="no" expand="full" size="large" >No</ion-button>
+     <ion-button  routerLink="/quick-tour" class="yes" expand="full" size="large" >Yes</ion-button>
+     <ion-button routerLink="/search" class="no" expand="full" size="large" >No</ion-button>
 
 </ion-content>
