--- a/Clover_Frontend/src/app/login/login.page.html
+++ b/Clover_Frontend/src/app/login/login.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar color="primary"></ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-menu-button menu="main-menu"></ion-menu-button>
+
+  </ion-toolbar>
 </ion-header>
 
 
