--- a/Clover_Frontend/src/app/login/login.page.scss
+++ b/Clover_Frontend/src/app/login/login.page.scss
@@ -65,3 +65,11 @@ ion-toolbar {
         margin-left: 160px;
     }
   }
+  ion-menu-button {
+    color: white;
+    float: left;
+    width: unset;
+    font-size: 2em;
+    margin-top: 0.3em;
+    margin-left: 0.3em;
+  }
