--- a/Clover_Frontend/src/app/app.component.html
+++ b/Clover_Frontend/src/app/app.component.html
@@ -1,3 +1,39 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<ion-app color="primary">
+  <ion-menu menuId="main-menu" content-id="main" color="primary">
+    <ion-header class="burger">
+      <ion-toolbar class="inner-toolbar">
+        Area/Roskilde
+      </ion-toolbar>
+    </ion-header>
+    <ion-content color="primary">
+      <ion-list color="primary" lines = none>
+        <ion-menu-toggle color="light">
+          <ion-item color="primary">
+            <ion-icon name="settings"></ion-icon>
+            <ion-button  type="button" expand="block" color="light" fill="clear">Terms & Conditions</ion-button>
+          </ion-item>
+        </ion-menu-toggle>
+          <ion-menu-toggle>
+            <ion-item color="primary">
+              <ion-icon name="person"></ion-icon>
+              <ion-button  type="button" expand="block" color="light" fill="clear">About Us</ion-button>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle>
+            <ion-item color="primary">
+              <ion-icon name="star"></ion-icon>
+              <ion-button routerLink="/login" type="button" expand="block" color="light" fill="clear">Give Feedback</ion-button>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle>
+            <ion-item color="primary">
+              <ion-icon name="flag"></ion-icon> 
+              <ion-button routerLink="/quick-tour" type="button" expand="block" color="light" fill="clear">Take a Tour</ion-button>
+
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
