--- a/Clover_Frontend/src/app/search/search.page.scss
+++ b/Clover_Frontend/src/app/search/search.page.scss
@@ -22,3 +22,11 @@ ion-content {
 
     }
 }
+ion-menu-button {
+    color: white;
+    float: left;
+    width: unset;
+    font-size: 2em;
+    margin-top: 0.3em;
+    margin-left: 0.3em;
+  }
