--- a/Clover_Frontend/src/app/tour-start/tour-start.page.html
+++ b/Clover_Frontend/src/app/tour-start/tour-start.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-toolbar>
   <ion-header class="ion-no-border">
    </ion-header>
