--- a/Clover_Frontend/src/app/home/home.page.html
+++ b/Clover_Frontend/src/app/home/home.page.html
@@ -1,20 +1,205 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-menu-button menu="main-menu"></ion-menu-button>
+    <ion-title>Area/Roskilde</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content  fullscreen ="true" >
+<ion-card>
+    <ion-card-header>
+      <ion-card-title>Outdoor climate</ion-card-title>
+    </ion-card-header>
+  
+    <ion-row>
+      <ion-col>
+        <ion-card-content>
+          Temperature
+        </ion-card-content>
+      </ion-col>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+      <ion-col>
+        <ion-card-content>
+          30° c
+        </ion-card-content>
+      </ion-col>
+   </ion-row>
+
+   <ion-row>
+    <ion-col>
+      <ion-card-content>
+        Humidity
+      </ion-card-content>
+    </ion-col>
+
+    <ion-col>
+      <ion-card-content>
+        60%
+       </ion-card-content>
+     </ion-col>
+   </ion-row>
+
+  </ion-card>
+
+  <ion-card>
+    <ion-grid>
+
+    <ion-card-header>
+      <ion-card-title>Indoor climate</ion-card-title>
+    </ion-card-header>
+
+      <ion-row>
+        <ion-col>
+          <ion-card-content>
+            Temperature
+          </ion-card-content>
+        </ion-col>
+
+        <ion-col>
+          <ion-card-content style="text-align:right;">
+            24° c
+          </ion-card-content>
+        </ion-col>
+     </ion-row>
+
+     <ion-row>
+      <ion-col>
+        <ion-card-content>
+          Ventilation
+        </ion-card-content>
+      </ion-col>
+
+      <ion-col>
+        <ion-card-content style="text-align:right;">
+          3
+        </ion-card-content>
+      </ion-col>
+   </ion-row>
+
+    <ion-row>
+     <ion-col>
+       <ion-card-content>
+         Humidity
+       </ion-card-content>
+     </ion-col>
+
+     <ion-col>
+       <ion-card-content style="text-align:right;">
+         60%
+        </ion-card-content>
+      </ion-col>
+    </ion-row>
+
+    </ion-grid>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-grid>
+
+    <ion-card-header>
+      <ion-card-title>Preset</ion-card-title>
+    </ion-card-header>
+
+
+
+
+
+     <ion-fab >
+<ion-row>
+      <ion-col>
+       <ion-fab-button>
+          <ion-icon name="star-outline"></ion-icon>
+       </ion-fab-button>
+       <ion-fab-list side="top">
+         <ion-fab-button>N</ion-fab-button>
+       </ion-fab-list>
+       <ion-fab-list side="start">
+         <ion-fab-button>C</ion-fab-button>
+       </ion-fab-list>
+       <ion-fab-list side="end">
+          <ion-fab-button>H</ion-fab-button>
+        </ion-fab-list>
+      </ion-col>
+    </ion-row>
+     </ion-fab>
+
+
+
+    
+    <ion-row>
+      <ion-col>
+        <ion-card-content>
+          Temperature
+        </ion-card-content>
+      </ion-col>
+
+      <ion-col>
+        <ion-card-content style="text-align:right;">
+          30° c
+        </ion-card-content>
+      </ion-col>
+   </ion-row>
+
+    <ion-item>
+      <ion-range min="1500" max="2000" step="100" value="1400" snaps color="danger">
+      </ion-range>
+    </ion-item>
+
+    <ion-row>
+      <ion-col>
+        <ion-card-content>
+          Ventilation
+        </ion-card-content>
+      </ion-col>
+
+      <ion-col>
+        <ion-card-content style="text-align:right;">
+          3
+        </ion-card-content>
+      </ion-col>
+   </ion-row>
+
+    <ion-item>
+      <ion-range min="1500" max="2000" step="100" value="1400" snaps color="danger">
+      </ion-range>
+    </ion-item>
+
+    <ion-row>
+      <ion-col>
+        <ion-card-content>
+          Humidity
+        </ion-card-content>
+      </ion-col>
+ 
+      <ion-col>
+        <ion-card-content style="text-align:right;">
+          60%
+         </ion-card-content>
+       </ion-col>
+     </ion-row>
+
+    <ion-item>
+      <ion-range min="1500" max="2000" step="100" value="1400" snaps color="danger">
+      </ion-range>
+    </ion-item>
+  </ion-grid>
+  </ion-card>
+
+
+
 </ion-content>
+
+
+<ion-footer><ion-toolbar>
+  <ion-tab-button tab="schedule" slot="start">
+    <ion-icon name="log-out-outline"></ion-icon>
+    <ion-label>Exit</ion-label>
+  </ion-tab-button>
+
+  <ion-tab-button tab="about" slot="end">
+    <ion-icon name="chatbubbles-outline"></ion-icon>
+    <ion-label>Vote</ion-label>
+  </ion-tab-button>
+
+</ion-toolbar></ion-footer>
