--- a/Clover_Frontend/src/app/home/home.page.scss
+++ b/Clover_Frontend/src/app/home/home.page.scss
@@ -1,27 +1,17 @@
-#container {
+
+ion-card-header{
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  text-decoration: underline;
+  text-decoration-color: #35BEB6;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-menu-button {
+  color: white;
+  float: left;
+  width: unset;
+  font-size: 2em;
+  margin-top: 0.3em;
+  margin-left: 0.3em;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-fab{
+  margin-left: 38%;
 }
