--- a/Clover_Frontend/src/app/home/home.page.html
+++ b/Clover_Frontend/src/app/home/home.page.html
@@ -5,23 +5,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content  fullscreen ="true" >
+<ion-content  fullscreen >
 <ion-card>
     <ion-card-header>
       <ion-card-title>Outdoor climate</ion-card-title>
     </ion-card-header>
-  
-    <ion-row>
+  <ion-row>
       <ion-col>
-        <ion-card-content>
-          Temperature
-        </ion-card-content>
+        <ion-card-content>Temperature</ion-card-content>
       </ion-col>
-
-      <ion-col>
-        <ion-card-content>
-          30° c
-        </ion-card-content>
+    <ion-col>
+        <ion-card-content>30° C</ion-card-content>
       </ion-col>
    </ion-row>
 
@@ -105,10 +99,10 @@
 
 
 
-     <ion-fab >
-<ion-row>
+     <ion-fab class="ion-align-items-center">
+     <ion-row>
       <ion-col>
-       <ion-fab-button>
+       <ion-fab-button color="secondary">
           <ion-icon name="star-outline"></ion-icon>
        </ion-fab-button>
        <ion-fab-list side="top">
@@ -161,7 +155,7 @@
    </ion-row>
 
     <ion-item>
-      <ion-range min="1500" max="2000" step="100" value="1400" snaps color="danger">
+      <ion-range min="1500" max="2000" step="150" value="1400" snaps color="danger">
       </ion-range>
     </ion-item>
 
@@ -192,13 +186,13 @@
 
 
 <ion-footer><ion-toolbar>
-  <ion-tab-button tab="schedule" slot="start">
-    <ion-icon name="log-out-outline"></ion-icon>
+  <ion-tab-button class="exit" tab="schedule" slot="start" routerLink="/login">
+    <ion-icon color="secondary" name="log-out-outline"></ion-icon>
     <ion-label>Exit</ion-label>
   </ion-tab-button>
 
   <ion-tab-button tab="about" slot="end">
-    <ion-icon name="chatbubbles-outline"></ion-icon>
+    <ion-icon color="secondary"  name="chatbubbles-outline"></ion-icon>
     <ion-label>Vote</ion-label>
   </ion-tab-button>
 
