--- a/Clover_Frontend/src/app/login/login.page.html
+++ b/Clover_Frontend/src/app/login/login.page.html
@@ -29,6 +29,12 @@
 
     <ion-button routerLink="/signup" type="button" expand="block" color="medium" fill="clear">Don't have an account? Sign up here
     </ion-button>
+    <ion-row class="ha">
+      <ion-label color="medium">
+        - OR -
+      </ion-label>
+    </ion-row>
+  
 
     <ion-button fill="clear" class="googlebtn ion-no-padding">
       <img class="smt" src="assets/images/google.png">
