--- a/Clover_Frontend/src/app/login/login.page.scss
+++ b/Clover_Frontend/src/app/login/login.page.scss
@@ -50,20 +50,26 @@ ion-toolbar {
 
     }
     .googlebtn{
-        margin-top: 120px;
+        margin-top: 60px;
         margin-left: 50px;
 
 
 
     }
     .fbbtn{
-        margin-top: 120px;
+        margin-top: 60px;
         margin-left: 30px;
 
     }
     .pass{
         margin-left: 160px;
     }
+    .ha{
+      margin-left: 47%;
+      margin-top: 10%;
+      margin-bottom: 0%;
+    }
+   
   }
   ion-menu-button {
     color: white;
