--- a/Clover_Frontend/src/app/search/search.page.html
+++ b/Clover_Frontend/src/app/search/search.page.html
@@ -14,6 +14,11 @@
     and introduce the code<br>
     in the search bar.</h1>
 
-    <ion-searchbar showCancelButton="focus"></ion-searchbar>
-
+    <form >
+      <ion-searchbar
+      (search)="searchForIsland($event.target.value)"
+         showCancelButton="focus"
+         >
+      </ion-searchbar>
+    </form>
 </ion-content>
