--- a/Clover_Frontend/src/app/quick-tour/quick-tour.page.html
+++ b/Clover_Frontend/src/app/quick-tour/quick-tour.page.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-menu-button menu="main-menu"></ion-menu-button>
     <ion-title>QUICK TOUR</ion-title>
     </ion-toolbar>
   <ion-header class="ion-no-border">
