--- a/Clover_Frontend/src/app/quick-tour/quick-tour.page.scss
+++ b/Clover_Frontend/src/app/quick-tour/quick-tour.page.scss
@@ -114,5 +114,13 @@
 
         
        }
+       ion-menu-button {
+        color: white;
+        float: left;
+        width: unset;
+        font-size: 2em;
+        margin-top: 0.3em;
+        margin-left: 0.3em;
+      }
     
   
