--- a/Clover_Frontend/src/app/home/home.page.html
+++ b/Clover_Frontend/src/app/home/home.page.html
@@ -50,7 +50,7 @@
 
         <ion-col>
           <ion-card-content style="text-align:right;">
-            24° c
+            24° C
           </ion-card-content>
         </ion-col>
      </ion-row>
@@ -111,32 +111,15 @@
      
       </ion-fab>
     </ion-card-header>
-    <!-- <ion-fab class="ion-align-items-center">
-     <ion-row class="row2">
-      <ion-col>
-       <ion-fab-button color="secondary">
-          <ion-icon name="star-outline"></ion-icon>
-       </ion-fab-button>
-       <ion-fab-list side="top">
-         <ion-fab-button>N</ion-fab-button>
-       </ion-fab-list>
-       <ion-fab-list side="start">
-         <ion-fab-button>C</ion-fab-button>
-       </ion-fab-list>
-       <ion-fab-list side="end">
-          <ion-fab-button>H</ion-fab-button>
-        </ion-fab-list>
-      </ion-col>
-    </ion-row>
-     </ion-fab> -->
-      <ion-row class="row2">
+
+      <ion-row class="ion-align-items-center">
       <ion-col>
         <ion-card-content>
           Temperature
         </ion-card-content>
       </ion-col>
        <ion-card-content style="text-align:right;">
-          30° c
+          30° C
         </ion-card-content>
     
     </ion-row>
